act-4/spire-envoy-example/envoy/client-envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-bootstrap-client
data:
  envoy-bootstrap-client.yaml: |
    static_resources:
      clusters:
      - name: server
        connect_timeout: 1s
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: server
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: server-app.neutrino.svc.cluster.local
                    port_value: 8080
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: server }
              http_filters:
              - name: envoy.filters.http.router
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: spiffe_cert
                sds_config:
                  path: "/run/spire/sockets/agent.sock"
              validation_context_sds_secret_config:
                name: spiffe_root
                sds_config:
                  path: "/run/spire/sockets/agent.sock"
